--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -80,15 +80,15 @@
 		<div class="welcome">
 		<div class="container">
 			<div class="col-md-4 agileits_welcome_grid_right">
-				<a href="/free-nodes/2024-2-28-free-node-subscribe.htm">
-					<img src="/uploads/20240228/17a9e01ded9e492cb2b2edefa16af20f.webp" alt="2月28日19.7M/S|Shadowrocket/SSR/V2ray/Clash免费节点每天更新订阅链接" class="img-responsive" />
+				<a href="/free-nodes/2024-2-28-free-ssr-node.htm">
+					<img src="/uploads/20240228/d3c24bb20e9a1c8c2d93a6bf044ee5c4.webp" alt="2月28日20.3M/S|V2ray/Clash/SSR/Shadowrocket免费节点每天更新订阅链接" class="img-responsive" />
 				</a>
 			</div>
 			<div class="col-md-8 agileits_welcome_grid_left">
-				<a href="/free-nodes/2024-2-28-free-node-subscribe.htm">
-					<h2>2月28日19.7M/S|Shadowrocket/SSR/V2ray/Clash免费节点每天更新订阅链接</h2>
+				<a href="/free-nodes/2024-2-28-free-ssr-node.htm">
+					<h2>2月28日20.3M/S|V2ray/Clash/SSR/Shadowrocket免费节点每天更新订阅链接</h2>
 				</a>
-				<p>这一次的节点更新覆盖了美国、日本、加拿大、韩国、香港、新加坡、欧洲等地区,最高速度可达19.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+				<p>这一次的节点更新覆盖了韩国、日本、加拿大、香港、新加坡、欧洲、美国等地区,最高速度可达20.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
 			</div>
 			<div class="clearfix"> </div>
 		</div>
