--- a/index.html
+++ b/index.html
@@ -114,6 +114,22 @@
 		<div class="welcome">
 		<div class="container">
 			<div class="col-md-4 agileits_welcome_grid_right">
+				<a href="/free-nodes/2024-3-1-free-node-subscribe-links.htm">
+					<img src="/uploads/20240228/b689047df3c43c67dc5627978a2159c3.webp" alt="3月1日22.5M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接" class="img-responsive" />
+				</a>
+			</div>
+			<div class="col-md-8 agileits_welcome_grid_left">
+				<a href="/free-nodes/2024-3-1-free-node-subscribe-links.htm">
+					<h2>3月1日22.5M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接</h2>
+				</a>
+				<p>这一次的节点更新覆盖了欧洲、香港、韩国、新加坡、加拿大、日本、美国等地区,最高速度可达22.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+			</div>
+			<div class="clearfix"> </div>
+		</div>
+	</div>
+		<div class="welcome">
+		<div class="container">
+			<div class="col-md-4 agileits_welcome_grid_right">
 				<a href="/free-nodes/2024-2-29-clash-node.htm">
 					<img src="/uploads/20240228/c38971d27f34eb1a1231acac753c4fee.webp" alt="2月29日20.8M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接" class="img-responsive" />
 				</a>
