--- a/free-nodes/2024-2-28-free-ssr-node.htm
+++ b/free-nodes/2024-2-28-free-ssr-node.htm
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
 <title>2月28日20.3M/S|V2ray/Clash/SSR/Shadowrocket免费节点每天更新订阅链接</title>
 <!-- for-mobile-apps -->
@@ -112,17 +112,6 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 	</div>
 <!-- //single -->
 
-    <script>
-    $(function() {
-        $('.js_to').click(function(){
-            var url = $(this).data('url');
-            var code = $(this).data('code');
-            url += code;
-
-            window.open(url);
-        })
-    });
-    </script>
 <!-- footer -->
 	
 	<div class="copy-right-social">
@@ -150,5 +139,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 <!-- //footer -->
 <!-- for bootstrap working -->
 	<script src="/assets/addons/xcblog/js/frontend/clashgithub/bootstrap.js"></script>
+    <script>
+    $(function() {
+        $('.js_to').click(function(){
+            var url = $(this).data('url');
+            var code = $(this).data('code');
+            url += code;
+
+            window.open(url);
+        })
+    });
+    </script>
 </body>
 </html>
