--- a/free-nodes/2024-3-3-free-v2ray-subscribe.htm
+++ b/free-nodes/2024-3-3-free-v2ray-subscribe.htm
@@ -2,12 +2,12 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<title>3月2日22.2M/S|SSR/Shadowrocket/Clash/V2ray免费节点每天更新订阅链接</title>
+<title>3月3日19M/S|V2ray/SSR/Clash/Shadowrocket免费节点每天更新订阅链接</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="3月2日Clash订阅链接, SSR订阅, Shadowrocket订阅链接Clash Github演示站" />
-<meta name="description" content="3月2日节点订阅更新,SSR/Shadowrocket/Clash/V2ray免费节点订阅链接,我们专注免费节点每天更新,这一次的节点更新覆盖了加拿大、美国、欧洲、新加坡、香港、韩国、日本等地区,最高速度可达22.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。" />
+<meta name="keywords" content="3月3日Clash订阅链接, SSR订阅, Shadowrocket订阅链接Clash Github演示站" />
+<meta name="description" content="3月3日节点订阅更新,V2ray/SSR/Clash/Shadowrocket免费节点订阅链接,我们专注免费节点每天更新,这一次的节点更新覆盖了美国、新加坡、韩国、日本、香港、加拿大、欧洲等地区,最高速度可达19 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 		function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- //for-mobile-apps -->
@@ -79,7 +79,7 @@
 <!-- about -->
 	<div class="about">
 		<div class="container">
-			<h1>3月2日22.2M/S|SSR/Shadowrocket/Clash/V2ray免费节点每天更新订阅链接</h1>
+			<h1>3月3日19M/S|V2ray/SSR/Clash/Shadowrocket免费节点每天更新订阅链接</h1>
 			<ul>
 				<li><a href="/">首页</a><i>|</i></li>
 				<li><a href="/free-nodes/">免费节点</a><i>|</i></li>
@@ -93,7 +93,7 @@
 		<div class="container">
 
 			<div class="wthree_single_grid1">
-				<p>这次的更新跨足了加拿大、美国、欧洲、新加坡、香港、韩国、日本等多个地区，节点覆盖广泛，最高速度可达22.2 M/S。这意味着，无论您身处何处，都能享受到更快、更稳定的网络连接。这些新节点的加入，不仅为您提供了更广泛的网络覆盖，还能让您轻松解锁全球各地的网络内容，尽情畅游互联网。无论是日本的动漫、美国的影视、还是欧洲的新闻，都能够一手掌握。只需复制下方提供的v2ray/Clash订阅链接，添加到您的客户端，就能立即体验到新节点带来的畅快感受。这次更新的目的就是为了让您拥有更畅快、更愉悦的网络体验，享受高速流畅的网络连接。随着全球互联网的发展，网络已经成为我们生活中不可或缺的一部分，而这次更新就是为了让您更好地融入这个数字化的世界。</p><p>&nbsp;</p><h3>高速机场推荐1【星辰VPN】</h3><p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">无视高峰，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！
+				<p>这次的更新跨足了美国、新加坡、韩国、日本、香港、加拿大、欧洲等多个地区，节点覆盖广泛，最高速度可达19 M/S。这意味着，无论您身处何处，都能享受到更快、更稳定的网络连接。这些新节点的加入，不仅为您提供了更广泛的网络覆盖，还能让您轻松解锁全球各地的网络内容，尽情畅游互联网。无论是日本的动漫、美国的影视、还是欧洲的新闻，都能够一手掌握。只需复制下方提供的v2ray/Clash订阅链接，添加到您的客户端，就能立即体验到新节点带来的畅快感受。这次更新的目的就是为了让您拥有更畅快、更愉悦的网络体验，享受高速流畅的网络连接。随着全球互联网的发展，网络已经成为我们生活中不可或缺的一部分，而这次更新就是为了让您更好地融入这个数字化的世界。</p><p>&nbsp;</p><h3>高速机场推荐1【星辰VPN】</h3><p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">无视高峰，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！
 IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
 
 
@@ -107,7 +107,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 
 <p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://invite.fastconnect.cc/#/register?code=" data-code="x1m5Kg8R" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">FCCloud（点击注册）</a>】</p>
 
-<p>&nbsp;</p><p></p><h2>订阅链接</h2><p>&nbsp;</p><p><strong>clash订阅链接</strong></p><p>https://clashgithub.github.io/uploads/2024/03/0-20240302.yaml</p><p>https://clashgithub.github.io/uploads/2024/03/1-20240302.yaml</p><p>https://clashgithub.github.io/uploads/2024/03/2-20240302.yaml</p><p>https://clashgithub.github.io/uploads/2024/03/3-20240302.yaml</p><p>https://clashgithub.github.io/uploads/2024/03/4-20240302.yml</p><p>&nbsp;</p><p><strong>v2ray订阅链接:</strong></p><p>https://clashgithub.github.io/uploads/2024/03/0-20240302.txt</p><p>https://clashgithub.github.io/uploads/2024/03/1-20240302.txt</p><p>https://clashgithub.github.io/uploads/2024/03/2-20240302.txt</p><p>https://clashgithub.github.io/uploads/2024/03/3-20240302.txt</p><p>https://clashgithub.github.io/uploads/2024/03/4-20240302.txt</p><p>&nbsp;</p><p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://qingzhou.world/#/register?code=" data-code="0AmHG88J" rel="nofollow noopener" style="color:#c00;">轻舟机场</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>			</div>
+<p>&nbsp;</p><p></p><h2>订阅链接</h2><p>&nbsp;</p><p><strong>clash订阅链接</strong></p><p>https://clashgithub.github.io/uploads/2024/03/0-20240303.yaml</p><p>https://clashgithub.github.io/uploads/2024/03/1-20240303.yaml</p><p>https://clashgithub.github.io/uploads/2024/03/2-20240303.yaml</p><p>https://clashgithub.github.io/uploads/2024/03/3-20240303.yaml</p><p>https://clashgithub.github.io/uploads/2024/03/4-20240303.yml</p><p>&nbsp;</p><p><strong>v2ray订阅链接:</strong></p><p>https://clashgithub.github.io/uploads/2024/03/0-20240303.txt</p><p>https://clashgithub.github.io/uploads/2024/03/1-20240303.txt</p><p>https://clashgithub.github.io/uploads/2024/03/2-20240303.txt</p><p>https://clashgithub.github.io/uploads/2024/03/3-20240303.txt</p><p>https://clashgithub.github.io/uploads/2024/03/4-20240303.txt</p><p>&nbsp;</p><p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://www.antlink.cc/#/register?code=" data-code="GJzXZA2s" rel="nofollow noopener" style="color:#c00;">AntLink</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>			</div>
 			
 		</div>
 	</div>
