--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
 <title>ClashGithub | SSR/V2ray/Clash免费节点</title>
 <!-- for-mobile-apps -->
@@ -111,6 +111,22 @@
 <!-- //banner -->
 
 <!-- welcome -->
+		<div class="welcome">
+		<div class="container">
+			<div class="col-md-4 agileits_welcome_grid_right">
+				<a href="/free-nodes/2024-3-3-free-v2ray-subscribe.htm">
+					<img src="/uploads/20240228/e257e01abd056413997dc08bd6b623fb.webp" alt="3月3日19M/S|V2ray/SSR/Clash/Shadowrocket免费节点每天更新订阅链接" class="img-responsive" />
+				</a>
+			</div>
+			<div class="col-md-8 agileits_welcome_grid_left">
+				<a href="/free-nodes/2024-3-3-free-v2ray-subscribe.htm">
+					<h2>3月3日19M/S|V2ray/SSR/Clash/Shadowrocket免费节点每天更新订阅链接</h2>
+				</a>
+				<p>这一次的节点更新覆盖了美国、新加坡、韩国、日本、香港、加拿大、欧洲等地区,最高速度可达19 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+			</div>
+			<div class="clearfix"> </div>
+		</div>
+	</div>
 		<div class="welcome">
 		<div class="container">
 			<div class="col-md-4 agileits_welcome_grid_right">
