--- a/free-nodes/2024-3-3-free-v2ray-subscribe.htm
+++ b/free-nodes/2024-3-3-free-v2ray-subscribe.htm
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
+<link rel="canonical" href="https://clashgithub.github.io" />
 <title>3月3日19M/S|V2ray/SSR/Clash/Shadowrocket免费节点每天更新订阅链接</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
