--- a/free-nodes/2024-3-4-clash-v2ray-ss-ssr.htm
+++ b/free-nodes/2024-3-4-clash-v2ray-ss-ssr.htm
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
+<link rel="canonical" href="https://clashgithub.github.io" />
 <title>3月4日21.7M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
