--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
+<link rel="canonical" href="https://clashgithub.github.io" />
 <title>ClashGithub | SSR/V2ray/Clash免费节点</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -111,6 +112,22 @@
 <!-- //banner -->
 
 <!-- welcome -->
+		<div class="welcome">
+		<div class="container">
+			<div class="col-md-4 agileits_welcome_grid_right">
+				<a href="/free-nodes/2024-3-7-clash-windows.htm">
+					<img src="/uploads/20240228/7fe0a3254708abdaf06a53e4d29ef007.webp" alt="3月7日19.8M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接" class="img-responsive" />
+				</a>
+			</div>
+			<div class="col-md-8 agileits_welcome_grid_left">
+				<a href="/free-nodes/2024-3-7-clash-windows.htm">
+					<h2>3月7日19.8M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接</h2>
+				</a>
+				<p>这一次的节点更新覆盖了韩国、加拿大、欧洲、日本、美国、香港、新加坡等地区,最高速度可达19.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+			</div>
+			<div class="clearfix"> </div>
+		</div>
+	</div>
 		<div class="welcome">
 		<div class="container">
 			<div class="col-md-4 agileits_welcome_grid_right">
