--- a/free-nodes/2024-2-28-free-ssr-node.htm
+++ b/free-nodes/2024-2-28-free-ssr-node.htm
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
+<link rel="canonical" href="https://clashgithub.github.io" />
 <title>2月28日20.3M/S|V2ray/Clash/SSR/Shadowrocket免费节点每天更新订阅链接</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
