--- a/free-nodes/2024-2-29-clash-node.htm
+++ b/free-nodes/2024-2-29-clash-node.htm
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
+<link rel="canonical" href="https://clashgithub.github.io" />
 <title>2月29日20.8M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
