--- a/index.html
+++ b/index.html
@@ -115,6 +115,22 @@
 		<div class="welcome">
 		<div class="container">
 			<div class="col-md-4 agileits_welcome_grid_right">
+				<a href="/free-nodes/2024-3-10-node-share-links.htm">
+					<img src="/uploads/20240228/819f1aade82ef2f65ccdf55abb283a16.webp" alt="3月10日19.4M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接" class="img-responsive" />
+				</a>
+			</div>
+			<div class="col-md-8 agileits_welcome_grid_left">
+				<a href="/free-nodes/2024-3-10-node-share-links.htm">
+					<h2>3月10日19.4M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接</h2>
+				</a>
+				<p>这一次的节点更新覆盖了美国、日本、新加坡、香港、韩国、加拿大、欧洲等地区,最高速度可达19.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+			</div>
+			<div class="clearfix"> </div>
+		</div>
+	</div>
+		<div class="welcome">
+		<div class="container">
+			<div class="col-md-4 agileits_welcome_grid_right">
 				<a href="/free-nodes/2024-3-9-free-clash-subscribe.htm">
 					<img src="/uploads/20240228/7aa6e6a64f6cba0d37441ab3be847079.webp" alt="3月9日18.7M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接" class="img-responsive" />
 				</a>
