--- a/index.html
+++ b/index.html
@@ -115,6 +115,22 @@
 		<div class="welcome">
 		<div class="container">
 			<div class="col-md-4 agileits_welcome_grid_right">
+				<a href="/free-nodes/2024-3-11-free-high-speed-nodes.htm">
+					<img src="/uploads/20240228/dcf34dc84fbab448f7946e41c45555d6.webp" alt="3月11日20.6M/S|SSR/Shadowrocket/Clash/V2ray免费节点每天更新订阅链接" class="img-responsive" />
+				</a>
+			</div>
+			<div class="col-md-8 agileits_welcome_grid_left">
+				<a href="/free-nodes/2024-3-11-free-high-speed-nodes.htm">
+					<h2>3月11日20.6M/S|SSR/Shadowrocket/Clash/V2ray免费节点每天更新订阅链接</h2>
+				</a>
+				<p>这一次的节点更新覆盖了香港、欧洲、韩国、日本、美国、新加坡、加拿大等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+			</div>
+			<div class="clearfix"> </div>
+		</div>
+	</div>
+		<div class="welcome">
+		<div class="container">
+			<div class="col-md-4 agileits_welcome_grid_right">
 				<a href="/free-nodes/2024-3-10-node-share-links.htm">
 					<img src="/uploads/20240228/819f1aade82ef2f65ccdf55abb283a16.webp" alt="3月10日19.4M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接" class="img-responsive" />
 				</a>
