--- a/free-nodes/2024-2-28-free-ssr-node.htm
+++ b/free-nodes/2024-2-28-free-ssr-node.htm
@@ -108,8 +108,12 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 <p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">自用机场，稳定第一位</p>
 
 <p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://home.kuaimao.io/#/register?code=" data-code="FGw9HJH0" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">快猫官网（点击注册）</a>】</p><p>&nbsp;</p><p></p><h2>订阅链接</h2><p>&nbsp;</p><p><strong>clash订阅链接</strong></p><p>https://clashgithub.github.io/uploads/2024/02/0-20240228.yaml</p><p>https://clashgithub.github.io/uploads/2024/02/1-20240228.yaml</p><p>https://clashgithub.github.io/uploads/2024/02/2-20240228.yaml</p><p>https://clashgithub.github.io/uploads/2024/02/3-20240228.yaml</p><p>https://clashgithub.github.io/uploads/2024/02/4-20240228.yml</p><p>&nbsp;</p><p><strong>v2ray订阅链接:</strong></p><p>https://clashgithub.github.io/uploads/2024/02/0-20240228.txt</p><p>https://clashgithub.github.io/uploads/2024/02/1-20240228.txt</p><p>https://clashgithub.github.io/uploads/2024/02/2-20240228.txt</p><p>https://clashgithub.github.io/uploads/2024/02/3-20240228.txt</p><p>https://clashgithub.github.io/uploads/2024/02/4-20240228.txt</p><p>&nbsp;</p><p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://wkyuns.xyz/#/register?code=" data-code="ozKvcntt" rel="nofollow noopener" style="color:#c00;">悟空云</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>			</div>
-			
-		</div>
+
+            <div class="col-md-12 mt-5">
+                                <p>下一个：<a href="/free-nodes/2024-2-29-clash-node.htm">2月29日20.8M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接</a></p>
+                            </div>
+
+            		</div>
 	</div>
 <!-- //single -->
 
