--- a/free-nodes/2024-2-29-clash-node.htm
+++ b/free-nodes/2024-2-29-clash-node.htm
@@ -108,8 +108,23 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 <p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://www.fastconnectcloud1.com/#/register?code=" data-code="x1m5Kg8R" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">FCCloud（点击注册）</a>】</p>
 
 <p>&nbsp;</p><p></p><h2>订阅链接</h2><p>&nbsp;</p><p><strong>clash订阅链接</strong></p><p>https://clashgithub.github.io/uploads/2024/02/0-20240229.yaml</p><p>https://clashgithub.github.io/uploads/2024/02/1-20240229.yaml</p><p>https://clashgithub.github.io/uploads/2024/02/2-20240229.yaml</p><p>https://clashgithub.github.io/uploads/2024/02/3-20240229.yaml</p><p>https://clashgithub.github.io/uploads/2024/02/4-20240229.yml</p><p>&nbsp;</p><p><strong>v2ray订阅链接:</strong></p><p>https://clashgithub.github.io/uploads/2024/02/0-20240229.txt</p><p>https://clashgithub.github.io/uploads/2024/02/1-20240229.txt</p><p>https://clashgithub.github.io/uploads/2024/02/2-20240229.txt</p><p>https://clashgithub.github.io/uploads/2024/02/3-20240229.txt</p><p>https://clashgithub.github.io/uploads/2024/02/4-20240229.txt</p><p>&nbsp;</p><p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://qingyun.world/#/register?code=" data-code="krDNpzq7" rel="nofollow noopener" style="color:#c00;">轻云</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>			</div>
-			
-		</div>
+
+            <div class="col-md-12 mt-5">
+                                <p>上一个：<a href="/free-nodes/2024-2-28-free-ssr-node.htm">2月28日20.3M/S|V2ray/Clash/SSR/Shadowrocket免费节点每天更新订阅链接</a></p>
+                                <p>下一个：<a href="/free-nodes/2024-3-1-free-node-subscribe-links.htm">3月1日22.5M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接</a></p>
+                            </div>
+
+                        <div class="panel panel-default mt-5">
+                <div class="panel-heading">
+                    <h3 class="m-0">推荐文章</h3>
+                </div>
+                <div class="panel-body">
+                    <ul class="p-0 x-0">
+                                                <li class="py-2"><a href="/free-nodes/2024-2-28-free-ssr-node.htm">2月28日20.3M/S|V2ray/Clash/SSR/Shadowrocket免费节点每天更新订阅链接</a></li>
+                                            </ul>
+                </div>
+            </div>
+            		</div>
 	</div>
 <!-- //single -->
 
