--- a/sitemap.html
+++ b/sitemap.html
@@ -114,8 +114,8 @@
 	<div id="top">
 		<nav>clashgithub.github.io HTML Site Map</nav>
 		<h3>
-<span>Last updated: 2024, March 6<br />
-Total pages: 10</span>
+<span>Last updated: 2024, March 14<br />
+Total pages: 19</span>
 <a href="https://clashgithub.github.io">clashgithub.github.io Homepage</a>
 </h3></div>
 	<div id="cont">
@@ -125,9 +125,17 @@ Total pages: 10</span>
             
 <li class="lpage last-page"><a href="https://clashgithub.github.io/" title="ClashGithub | SSR/V2ray/Clash免费节点">ClashGithub | SSR/V2ray/Clash免费节点</a></li><li><ul class="level-1">
 
-            <li class="lhead">free-nodes/  <span class="lcount">9 pages</span></li>
+            <li class="lhead">free-nodes/  <span class="lcount">18 pages</span></li>
             
-<li class="lpage"><a href="https://clashgithub.github.io/free-nodes/" title="免费节点 - Clash Github演示站">免费节点 - Clash Github演示站</a></li>
+<li class="lpage"><a href="https://clashgithub.github.io/free-nodes/" title="免费节点 - Clash Github演示站 - 第2页">免费节点 - Clash Github演示站 - 第2页</a></li>
+<li class="lpage"><a href="https://clashgithub.github.io/free-nodes/2024-3-14-free-node-subscribe-links.htm" title="3月14日22.7M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接">3月14日22.7M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
+<li class="lpage"><a href="https://clashgithub.github.io/free-nodes/2024-3-13-free-ssr-subscribe.htm" title="3月13日19.4M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接">3月13日19.4M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
+<li class="lpage"><a href="https://clashgithub.github.io/free-nodes/2024-3-12-clash-node.htm" title="3月12日19.8M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接">3月12日19.8M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接</a></li>
+<li class="lpage"><a href="https://clashgithub.github.io/free-nodes/2024-3-11-free-high-speed-nodes.htm" title="3月11日20.6M/S|SSR/Shadowrocket/Clash/V2ray免费节点每天更新订阅链接">3月11日20.6M/S|SSR/Shadowrocket/Clash/V2ray免费节点每天更新订阅链接</a></li>
+<li class="lpage"><a href="https://clashgithub.github.io/free-nodes/2024-3-10-node-share-links.htm" title="3月10日19.4M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接">3月10日19.4M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
+<li class="lpage"><a href="https://clashgithub.github.io/free-nodes/2024-3-9-free-clash-subscribe.htm" title="3月9日18.7M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接">3月9日18.7M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接</a></li>
+<li class="lpage"><a href="https://clashgithub.github.io/free-nodes/2024-3-8-free-shadowrocket-node.htm" title="3月8日22M/S|Clash/SSR/Shadowrocket/V2ray免费节点每天更新订阅链接">3月8日22M/S|Clash/SSR/Shadowrocket/V2ray免费节点每天更新订阅链接</a></li>
+<li class="lpage"><a href="https://clashgithub.github.io/free-nodes/2024-3-7-clash-windows.htm" title="3月7日19.8M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接">3月7日19.8M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
 <li class="lpage"><a href="https://clashgithub.github.io/free-nodes/2024-3-6-clash-node.htm" title="3月6日18M/S|Shadowrocket/V2ray/Clash/SSR免费节点每天更新订阅链接">3月6日18M/S|Shadowrocket/V2ray/Clash/SSR免费节点每天更新订阅链接</a></li>
 <li class="lpage"><a href="https://clashgithub.github.io/free-nodes/2024-3-5-free-clash.htm" title="3月5日22.1M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接">3月5日22.1M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接</a></li>
 <li class="lpage"><a href="https://clashgithub.github.io/free-nodes/2024-3-4-clash-v2ray-ss-ssr.htm" title="3月4日21.7M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接">3月4日21.7M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
@@ -135,7 +143,8 @@ Total pages: 10</span>
 <li class="lpage"><a href="https://clashgithub.github.io/free-nodes/2024-3-2-node-share.htm" title="3月2日22.2M/S|SSR/Shadowrocket/Clash/V2ray免费节点每天更新订阅链接">3月2日22.2M/S|SSR/Shadowrocket/Clash/V2ray免费节点每天更新订阅链接</a></li>
 <li class="lpage"><a href="https://clashgithub.github.io/free-nodes/2024-3-1-free-node-subscribe-links.htm" title="3月1日22.5M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接">3月1日22.5M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接</a></li>
 <li class="lpage"><a href="https://clashgithub.github.io/free-nodes/2024-2-29-clash-node.htm" title="2月29日20.8M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接">2月29日20.8M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接</a></li>
-<li class="lpage last-page"><a href="https://clashgithub.github.io/free-nodes/2024-2-28-free-ssr-node.htm" title="2月28日20.3M/S|V2ray/Clash/SSR/Shadowrocket免费节点每天更新订阅链接">2月28日20.3M/S|V2ray/Clash/SSR/Shadowrocket免费节点每天更新订阅链接</a></li>
+<li class="lpage"><a href="https://clashgithub.github.io/free-nodes/2024-2-28-free-ssr-node.htm" title="2月28日20.3M/S|V2ray/Clash/SSR/Shadowrocket免费节点每天更新订阅链接">2月28日20.3M/S|V2ray/Clash/SSR/Shadowrocket免费节点每天更新订阅链接</a></li>
+<li class="lpage last-page"><a href="https://clashgithub.github.io/free-nodes/page-2.htm" title="免费节点 - Clash Github演示站">免费节点 - Clash Github演示站</a></li>
 </ul></li>
 </ul>
 		<!--
