--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="canonical" href="https://clashgithub.github.io" />
 <title>ClashGithub | SSR/V2ray/Clash免费节点</title>
 <!-- for-mobile-apps -->
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Clash免费节点,ssr,shadowsocks,科学上网,翻墙,ClashGithub" />
 <meta name="description" content="ClashGithub 每天会更新免费节点，包括 SSR、V2ray 和 Clash 等类型。它会提供详细的节点信息，如速度和覆盖地区等，还附有简明教程。ClashGithub 可以满足用户各种需求，为用户提供稳定可靠的免费节点，帮助用户轻松实现科学上网。" />
