--- a/free-nodes/2024-3-16-clash-node-daily-updates.htm
+++ b/free-nodes/2024-3-16-clash-node-daily-updates.htm
@@ -5,7 +5,7 @@
 <link rel="canonical" href="https://clashgithub.github.io" />
 <title>3月16日20.6M/S|Shadowrocket/V2ray/SSR/Clash免费节点每天更新订阅链接</title>
 <!-- for-mobile-apps -->
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="3月16日Clash订阅链接, SSR订阅, Shadowrocket订阅链接Clash Github演示站" />
 <meta name="description" content="3月16日节点订阅更新,Shadowrocket/V2ray/SSR/Clash免费节点订阅链接,我们专注免费节点每天更新,这一次的节点更新覆盖了加拿大、美国、日本、香港、新加坡、韩国、欧洲等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。" />
@@ -80,7 +80,7 @@
 <!-- about -->
 	<div class="about">
 		<div class="container">
-			<h1>3月16日20.6M/S|Shadowrocket/V2ray/SSR/Clash免费节点每天更新订阅链接</h1>
+			<h1 style="word-break: break-all;">3月16日20.6M/S|Shadowrocket/V2ray/SSR/Clash免费节点每天更新订阅链接</h1>
 			<ul>
 				<li><a href="/">首页</a><i>|</i></li>
 				<li><a href="/free-nodes/">免费节点</a><i>|</i></li>
