--- a/free-nodes/2024-4-2-clash-node.htm
+++ b/free-nodes/2024-4-2-clash-node.htm
@@ -5,7 +5,7 @@
 <link rel="canonical" href="https://clashgithub.github.io" />
 <title>4月2日→18M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接</title>
 <!-- for-mobile-apps -->
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="4月2日Clash订阅链接, SSR订阅, Shadowrocket订阅链接Clash Github演示站" />
 <meta name="description" content="4月2日节点订阅更新,Clash/SSR/Shadowrocket/V2ray免费节点订阅链接,我们专注免费节点每天更新,这一次的节点更新覆盖了加拿大、香港、美国、韩国、日本、新加坡、欧洲等地区,最高速度可达18 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。" />
@@ -80,7 +80,7 @@
 <!-- about -->
 	<div class="about">
 		<div class="container">
-			<h1>4月2日→18M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接</h1>
+			<h1 style="word-break: break-all;">4月2日→18M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接</h1>
 			<ul>
 				<li><a href="/">首页</a><i>|</i></li>
 				<li><a href="/free-nodes/">免费节点</a><i>|</i></li>
